fix header log in on mobile

--- a/app/assets/stylesheets/shared/sidebar/right.scss
+++ b/app/assets/stylesheets/shared/sidebar/right.scss
@@ -2,7 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 10px;
+
+  .icons {
+    display: flex;
+    gap: 10px;
+  }
 
   .buttons {
     display: flex;
